1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-map-segment.c: New file.  Guts from io-map.c.
	* io-map.c (diskfs_S_io_map): Just call diskfs_S_io_map_segment.
	* diskfs.h (diskfs_get_filemap): New parameter `index'.
	* rdwr-internal.c (_diskfs_rdwr_internal): Pass additional
	parameter to diskfs_get_filemap.
	* Makefile (IOSRCS): Add io-map-segment.c.

1999-07-24  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-rmdir.c (diskfs_S_dir_rmdir): Fix bugs in last change.
	Replace label `out' with local inline function `done'.
	Don't try diskfs_nput (NP) when NP is null.

1999-07-17  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-link.c (diskfs_S_dir_link): Fix error checks on ports.
	If DIRCRED (receiver port) is bad, return EOPNOTSUPP.
	If FILECRED (argument port) is bad, return EXDEV (after EROFS check).

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* boot-start.c (diskfs_S_exec_startup_get_info): Typo in last change.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* priv.h: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot-start.c (diskfs_S_exec_startup_get_info): Use mmap instead
	of vm_allocate.
	(diskfs_S_fsys_init): Likewise.
	* file-get-trans.c (diskfs_S_file_get_translator): Likewise.
	* file-getfh.c (diskfs_S_file_getfh): Likewise.
	* io-read.c (diskfs_S_io_read): Likewise.

Mon Jul  5 20:03:18 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* node-nputl.c (diskfs_nput_light): Fix typo in function
	declaration.  Reported by Yamashita TAKAO
	(jargon@lares.dti.ne.jp).

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* file-get-trans.c (diskfs_S_file_get_translator): Use munmap
	instead of vm_deallocate.
	* io-read.c (diskfs_S_io_read): Likewise.
	* protid-rele.c (diskfs_protid_rele): Likewise.

1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>

	* node-nref.c: New file; guts from diskfs.h.
	* node-nput.c: Likewise.
	* node-nrele.c: Likewise.
	* node-nrefl.c: Likewise.